Fix broken css - overflow in hero section and redundant margins for info card container

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ li {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 40vh;
+    height: auto;
     padding: 16px;
     flex-wrap: wrap;
 }
@@ -97,8 +97,6 @@ li {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    padding-left: 400px;
-    padding-right: 400px;
     padding-bottom: 50px;
 }
 
